--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "lifecal-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Goal Dots Wallpaper Generator for iPhone",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
